// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should test a default HCCustomPicker 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
        style="height: 100%;"
      >
        <div
          class="MuiBox-root css-zqjuxq"
        >
          <div
            class="MuiBox-root css-hboir5"
          >
            <div
              class="MuiBox-root css-1v5fmch"
            >
              <div
                class="w-color-interactive w-color-saturation"
                style="position: relative; inset: 0; cursor: crosshair; width: 100%; height: 100%; border-radius: 0;"
                tabindex="0"
              >
                <div
                  style="position: absolute; width: 4px; height: 4px; left: 86.72199170124482%; top: 5.490196078432064%; box-shadow: rgb(255, 255, 255) 0px 0px 0px 1.5px, rgba(0, 0, 0, 0.3) 0px 0px 1px 1px inset, rgba(0, 0, 0, 0.4) 0px 0px 1px 2px; border-radius: 50%; transform: translate(-2px, -2px);"
                />
              </div>
            </div>
            <div
              class="MuiBox-root css-1acylto"
            >
              <div
                class="w-color-alpha w-color-alpha-vertical w-color-hue "
                color="f18920ff"
                style="--alpha-background-color: #fff; --alpha-pointer-background-color: rgb(248, 248, 248); --alpha-pointer-box-shadow: rgb(0 0 0 / 37%) 0px 1px 4px 0px; border-radius: 0; background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAMUlEQVQ4T2NkYGAQYcAP3uCTZhw1gGGYhAGBZIA/nYDCgBDAm9BGDWAAJyRCgLaBCAAgXwixzAS0pgAAAABJRU5ErkJggg==) center; height: 100%; position: relative;"
              >
                <div
                  style="inset: 0; position: absolute; border-radius: 0;"
                />
                <div
                  class="w-color-interactive"
                  style="inset: 0; z-index: 1; position: absolute;"
                  tabindex="0"
                >
                  <div
                    class="MuiBox-root css-0"
                    style="position: absolute; left: 24px; top: -0.6267942583732058%;"
                  >
                    <svg
                      fill="none"
                      height="11"
                      viewBox="0 0 9 11"
                      width="9"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.75 9.39711L1 5.5L7.75 1.60289V9.39711Z"
                        fill="white"
                        stroke="black"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root"
              >
                <div
                  class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
                >
                  <label
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                    for="hex"
                  >
                    Hex
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                      id="hex"
                      pattern="#[0-9a-fA-F]{3}([0-9a-fA-F]{3})?"
                      type="text"
                      value="f18920ff"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-ihdtdm"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2.66 css-sb0z7h-MuiGrid-root"
              >
                <div
                  class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
                >
                  <label
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                    for="r"
                  >
                    R
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl hcp-number-input css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                      id="r"
                      max="255"
                      min="0"
                      type="number"
                      value="241"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-ihdtdm"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2.66 css-sb0z7h-MuiGrid-root"
              >
                <div
                  class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
                >
                  <label
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                    for="g"
                  >
                    G
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl hcp-number-input css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                      id="g"
                      max="255"
                      min="0"
                      type="number"
                      value="137"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-ihdtdm"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2.66 css-sb0z7h-MuiGrid-root"
              >
                <div
                  class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
                >
                  <label
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                    for="b"
                  >
                    B
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl hcp-number-input css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                      id="b"
                      max="255"
                      min="0"
                      type="number"
                      value="32"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-ihdtdm"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiBox-root css-1qm1lh"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom css-1ytbv3u-MuiTypography-root"
              >
                Opacity
              </span>
            </div>
            <span
              class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium css-1lh3nkt-MuiSlider-root"
            >
              <span
                class="MuiSlider-rail css-7o8aqz-MuiSlider-rail"
              />
              <span
                class="MuiSlider-track css-ttgsjq-MuiSlider-track"
                style="left: 0%; width: 100%;"
              />
              <span
                class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
                data-index="0"
                style="left: 0%;"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-11wrr02-MuiSlider-markLabel"
                data-index="0"
                style="left: 0%;"
              >
                0
              </span>
              <span
                class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
                data-index="1"
                style="left: 100%;"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-11wrr02-MuiSlider-markLabel"
                data-index="1"
                style="left: 100%;"
              >
                100
              </span>
              <span
                class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-m3xzcs-MuiSlider-thumb"
                data-index="0"
                style="left: 100%;"
              >
                <input
                  aria-label="Opacity"
                  aria-orientation="horizontal"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="100"
                  data-index="0"
                  max="100"
                  min="0"
                  step="1"
                  style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                  type="range"
                  value="100"
                />
                <span
                  aria-hidden="true"
                  class="MuiSlider-valueLabel css-807a7a-MuiSlider-valueLabel"
                >
                  <span
                    class="MuiSlider-valueLabelCircle"
                  >
                    <span
                      class="MuiSlider-valueLabelLabel"
                    >
                      100
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
      style="height: 100%;"
    >
      <div
        class="MuiBox-root css-zqjuxq"
      >
        <div
          class="MuiBox-root css-hboir5"
        >
          <div
            class="MuiBox-root css-1v5fmch"
          >
            <div
              class="w-color-interactive w-color-saturation"
              style="position: relative; inset: 0; cursor: crosshair; width: 100%; height: 100%; border-radius: 0;"
              tabindex="0"
            >
              <div
                style="position: absolute; width: 4px; height: 4px; left: 86.72199170124482%; top: 5.490196078432064%; box-shadow: rgb(255, 255, 255) 0px 0px 0px 1.5px, rgba(0, 0, 0, 0.3) 0px 0px 1px 1px inset, rgba(0, 0, 0, 0.4) 0px 0px 1px 2px; border-radius: 50%; transform: translate(-2px, -2px);"
              />
            </div>
          </div>
          <div
            class="MuiBox-root css-1acylto"
          >
            <div
              class="w-color-alpha w-color-alpha-vertical w-color-hue "
              color="f18920ff"
              style="--alpha-background-color: #fff; --alpha-pointer-background-color: rgb(248, 248, 248); --alpha-pointer-box-shadow: rgb(0 0 0 / 37%) 0px 1px 4px 0px; border-radius: 0; background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAMUlEQVQ4T2NkYGAQYcAP3uCTZhw1gGGYhAGBZIA/nYDCgBDAm9BGDWAAJyRCgLaBCAAgXwixzAS0pgAAAABJRU5ErkJggg==) center; height: 100%; position: relative;"
            >
              <div
                style="inset: 0; position: absolute; border-radius: 0;"
              />
              <div
                class="w-color-interactive"
                style="inset: 0; z-index: 1; position: absolute;"
                tabindex="0"
              >
                <div
                  class="MuiBox-root css-0"
                  style="position: absolute; left: 24px; top: -0.6267942583732058%;"
                >
                  <svg
                    fill="none"
                    height="11"
                    viewBox="0 0 9 11"
                    width="9"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.75 9.39711L1 5.5L7.75 1.60289V9.39711Z"
                      fill="white"
                      stroke="black"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-1yuhvjn"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root"
            >
              <div
                class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
              >
                <label
                  class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                  for="hex"
                >
                  Hex
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                    id="hex"
                    pattern="#[0-9a-fA-F]{3}([0-9a-fA-F]{3})?"
                    type="text"
                    value="f18920ff"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-ihdtdm"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2.66 css-sb0z7h-MuiGrid-root"
            >
              <div
                class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
              >
                <label
                  class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                  for="r"
                >
                  R
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl hcp-number-input css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                    id="r"
                    max="255"
                    min="0"
                    type="number"
                    value="241"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-ihdtdm"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2.66 css-sb0z7h-MuiGrid-root"
            >
              <div
                class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
              >
                <label
                  class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                  for="g"
                >
                  G
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl hcp-number-input css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                    id="g"
                    max="255"
                    min="0"
                    type="number"
                    value="137"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-ihdtdm"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2.66 css-sb0z7h-MuiGrid-root"
            >
              <div
                class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
              >
                <label
                  class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                  for="b"
                >
                  B
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl hcp-number-input css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                    id="b"
                    max="255"
                    min="0"
                    type="number"
                    value="32"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-ihdtdm"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-1yuhvjn"
        >
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom css-1ytbv3u-MuiTypography-root"
            >
              Opacity
            </span>
          </div>
          <span
            class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium css-1lh3nkt-MuiSlider-root"
          >
            <span
              class="MuiSlider-rail css-7o8aqz-MuiSlider-rail"
            />
            <span
              class="MuiSlider-track css-ttgsjq-MuiSlider-track"
              style="left: 0%; width: 100%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
              data-index="0"
              style="left: 0%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-11wrr02-MuiSlider-markLabel"
              data-index="0"
              style="left: 0%;"
            >
              0
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
              data-index="1"
              style="left: 100%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-11wrr02-MuiSlider-markLabel"
              data-index="1"
              style="left: 100%;"
            >
              100
            </span>
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-m3xzcs-MuiSlider-thumb"
              data-index="0"
              style="left: 100%;"
            >
              <input
                aria-label="Opacity"
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="100"
                data-index="0"
                max="100"
                min="0"
                step="1"
                style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="100"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel css-807a7a-MuiSlider-valueLabel"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    100
                  </span>
                </span>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should test a default HCCustomPicker with a custom color 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
        style="height: 100%;"
      >
        <div
          class="MuiBox-root css-zqjuxq"
        >
          <div
            class="MuiBox-root css-hboir5"
          >
            <div
              class="MuiBox-root css-1v5fmch"
            >
              <div
                class="w-color-interactive w-color-saturation"
                style="position: relative; inset: 0; cursor: crosshair; width: 100%; height: 100%; border-radius: 0;"
                tabindex="0"
              >
                <div
                  style="position: absolute; width: 4px; height: 4px; left: 0%; top: 72.94117647058869%; box-shadow: rgb(255, 255, 255) 0px 0px 0px 1.5px, rgba(0, 0, 0, 0.3) 0px 0px 1px 1px inset, rgba(0, 0, 0, 0.4) 0px 0px 1px 2px; border-radius: 50%; transform: translate(-2px, -2px);"
                />
              </div>
            </div>
            <div
              class="MuiBox-root css-1acylto"
            >
              <div
                class="w-color-alpha w-color-alpha-vertical w-color-hue "
                color="454545ff"
                style="--alpha-background-color: #fff; --alpha-pointer-background-color: rgb(248, 248, 248); --alpha-pointer-box-shadow: rgb(0 0 0 / 37%) 0px 1px 4px 0px; border-radius: 0; background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAMUlEQVQ4T2NkYGAQYcAP3uCTZhw1gGGYhAGBZIA/nYDCgBDAm9BGDWAAJyRCgLaBCAAgXwixzAS0pgAAAABJRU5ErkJggg==) center; height: 100%; position: relative;"
              >
                <div
                  style="inset: 0; position: absolute; border-radius: 0;"
                />
                <div
                  class="w-color-interactive"
                  style="inset: 0; z-index: 1; position: absolute;"
                  tabindex="0"
                >
                  <div
                    class="MuiBox-root css-0"
                    style="position: absolute; left: 24px; top: -9%;"
                  >
                    <svg
                      fill="none"
                      height="11"
                      viewBox="0 0 9 11"
                      width="9"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.75 9.39711L1 5.5L7.75 1.60289V9.39711Z"
                        fill="white"
                        stroke="black"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root"
              >
                <div
                  class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
                >
                  <label
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                    for="hex"
                  >
                    Hex
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                      id="hex"
                      pattern="#[0-9a-fA-F]{3}([0-9a-fA-F]{3})?"
                      type="text"
                      value="454545ff"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-ihdtdm"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2.66 css-sb0z7h-MuiGrid-root"
              >
                <div
                  class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
                >
                  <label
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                    for="r"
                  >
                    R
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl hcp-number-input css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                      id="r"
                      max="255"
                      min="0"
                      type="number"
                      value="69"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-ihdtdm"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2.66 css-sb0z7h-MuiGrid-root"
              >
                <div
                  class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
                >
                  <label
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                    for="g"
                  >
                    G
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl hcp-number-input css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                      id="g"
                      max="255"
                      min="0"
                      type="number"
                      value="69"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-ihdtdm"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2.66 css-sb0z7h-MuiGrid-root"
              >
                <div
                  class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
                >
                  <label
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                    for="b"
                  >
                    B
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl hcp-number-input css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                      id="b"
                      max="255"
                      min="0"
                      type="number"
                      value="69"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-ihdtdm"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiBox-root css-1qm1lh"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom css-1ytbv3u-MuiTypography-root"
              >
                Opacity
              </span>
            </div>
            <span
              class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium css-1lh3nkt-MuiSlider-root"
            >
              <span
                class="MuiSlider-rail css-7o8aqz-MuiSlider-rail"
              />
              <span
                class="MuiSlider-track css-ttgsjq-MuiSlider-track"
                style="left: 0%; width: 100%;"
              />
              <span
                class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
                data-index="0"
                style="left: 0%;"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-11wrr02-MuiSlider-markLabel"
                data-index="0"
                style="left: 0%;"
              >
                0
              </span>
              <span
                class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
                data-index="1"
                style="left: 100%;"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-11wrr02-MuiSlider-markLabel"
                data-index="1"
                style="left: 100%;"
              >
                100
              </span>
              <span
                class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-m3xzcs-MuiSlider-thumb"
                data-index="0"
                style="left: 100%;"
              >
                <input
                  aria-label="Opacity"
                  aria-orientation="horizontal"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="100"
                  data-index="0"
                  max="100"
                  min="0"
                  step="1"
                  style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                  type="range"
                  value="100"
                />
                <span
                  aria-hidden="true"
                  class="MuiSlider-valueLabel css-807a7a-MuiSlider-valueLabel"
                >
                  <span
                    class="MuiSlider-valueLabelCircle"
                  >
                    <span
                      class="MuiSlider-valueLabelLabel"
                    >
                      100
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
      style="height: 100%;"
    >
      <div
        class="MuiBox-root css-zqjuxq"
      >
        <div
          class="MuiBox-root css-hboir5"
        >
          <div
            class="MuiBox-root css-1v5fmch"
          >
            <div
              class="w-color-interactive w-color-saturation"
              style="position: relative; inset: 0; cursor: crosshair; width: 100%; height: 100%; border-radius: 0;"
              tabindex="0"
            >
              <div
                style="position: absolute; width: 4px; height: 4px; left: 0%; top: 72.94117647058869%; box-shadow: rgb(255, 255, 255) 0px 0px 0px 1.5px, rgba(0, 0, 0, 0.3) 0px 0px 1px 1px inset, rgba(0, 0, 0, 0.4) 0px 0px 1px 2px; border-radius: 50%; transform: translate(-2px, -2px);"
              />
            </div>
          </div>
          <div
            class="MuiBox-root css-1acylto"
          >
            <div
              class="w-color-alpha w-color-alpha-vertical w-color-hue "
              color="454545ff"
              style="--alpha-background-color: #fff; --alpha-pointer-background-color: rgb(248, 248, 248); --alpha-pointer-box-shadow: rgb(0 0 0 / 37%) 0px 1px 4px 0px; border-radius: 0; background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAMUlEQVQ4T2NkYGAQYcAP3uCTZhw1gGGYhAGBZIA/nYDCgBDAm9BGDWAAJyRCgLaBCAAgXwixzAS0pgAAAABJRU5ErkJggg==) center; height: 100%; position: relative;"
            >
              <div
                style="inset: 0; position: absolute; border-radius: 0;"
              />
              <div
                class="w-color-interactive"
                style="inset: 0; z-index: 1; position: absolute;"
                tabindex="0"
              >
                <div
                  class="MuiBox-root css-0"
                  style="position: absolute; left: 24px; top: -9%;"
                >
                  <svg
                    fill="none"
                    height="11"
                    viewBox="0 0 9 11"
                    width="9"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.75 9.39711L1 5.5L7.75 1.60289V9.39711Z"
                      fill="white"
                      stroke="black"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-1yuhvjn"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root"
            >
              <div
                class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
              >
                <label
                  class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                  for="hex"
                >
                  Hex
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                    id="hex"
                    pattern="#[0-9a-fA-F]{3}([0-9a-fA-F]{3})?"
                    type="text"
                    value="454545ff"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-ihdtdm"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2.66 css-sb0z7h-MuiGrid-root"
            >
              <div
                class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
              >
                <label
                  class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                  for="r"
                >
                  R
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl hcp-number-input css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                    id="r"
                    max="255"
                    min="0"
                    type="number"
                    value="69"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-ihdtdm"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2.66 css-sb0z7h-MuiGrid-root"
            >
              <div
                class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
              >
                <label
                  class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                  for="g"
                >
                  G
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl hcp-number-input css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                    id="g"
                    max="255"
                    min="0"
                    type="number"
                    value="69"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-ihdtdm"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2.66 css-sb0z7h-MuiGrid-root"
            >
              <div
                class="MuiFormControl-root css-1qe0y20-MuiFormControl-root"
              >
                <label
                  class="MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1xthx1o-MuiFormLabel-root"
                  for="b"
                >
                  B
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl hcp-number-input css-138nlzv-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input hcp-number-input hcp-number-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                    id="b"
                    max="255"
                    min="0"
                    type="number"
                    value="69"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-ihdtdm"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-1yuhvjn"
        >
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom css-1ytbv3u-MuiTypography-root"
            >
              Opacity
            </span>
          </div>
          <span
            class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium css-1lh3nkt-MuiSlider-root"
          >
            <span
              class="MuiSlider-rail css-7o8aqz-MuiSlider-rail"
            />
            <span
              class="MuiSlider-track css-ttgsjq-MuiSlider-track"
              style="left: 0%; width: 100%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
              data-index="0"
              style="left: 0%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-11wrr02-MuiSlider-markLabel"
              data-index="0"
              style="left: 0%;"
            >
              0
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
              data-index="1"
              style="left: 100%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-11wrr02-MuiSlider-markLabel"
              data-index="1"
              style="left: 100%;"
            >
              100
            </span>
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-m3xzcs-MuiSlider-thumb"
              data-index="0"
              style="left: 100%;"
            >
              <input
                aria-label="Opacity"
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="100"
                data-index="0"
                max="100"
                min="0"
                step="1"
                style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="100"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel css-807a7a-MuiSlider-valueLabel"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    100
                  </span>
                </span>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
